# vulp-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: vulp.db
src/: main.py  setup.py
src/bot/: main.py
src/bot/cogs/: calendar.py  complaint.py  help.py
src/bot/ux/bookmark/: integration.py  interfaces.py
src/bot/ux/utils/: cbutton.py  cform.py
src/database/: tables.py
src/database/repositories/: base_repo.py  calendar_repo.py
src/integrations/: bot_client.py
src/jobs/: main.py
src/jobs/cogs/: presence_cog.py
src/services/: __init__.py
src/services/adapters/: comunity_adapter.py
src/services/ports/: __init__.py  base_ports.py  calendar.py  comunity.py
src/services/utils/: __init__.py  bot_utils.py  exceptions.py
